# my-jarvis

./: .gitignore  README.md  env.yml  main.py  pyproject.toml
notes/: deployment-notes.md  monkey-release-plan.md  phase-1-infrastructure-basic-agent.md  phase-2-data-store-client-apps.md  phase-3-coding-agent-self-improvement.md  release-notes.md
pypacks/auth/: pyproject.toml
pypacks/cli-client/: pyproject.toml
pypacks/core/: pyproject.toml
pypacks/core/my_jarvis/core/components/: conversational_agent.py  playground.py
pypacks/fs-datastore/: pyproject.toml
pypacks/server/: pyproject.toml
pypacks/server/my_jarvis/server/: app.py  auth.py
round_01/scripts/: input_to_speech.sh  setup_vosk_model.sh
round_01/src/tts/: server.py
round_01/wiki/: .gitignore  index.md.html  package.json
round_01/wiki/components/: speech-to-text.md.html
scripts/: create_pypack.sh  deploy.sh  launch.sh  release.sh  teardown.sh
src/stt/: asr_server_microphone.py  chat-gpt.py  main.py  server.py  speech_recognier_server.py  speech_to_text.py
wiki/: index.html  index.md.html
