[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-jarvis-core"
version = "0.1.0"
description = "Core utilities for my-jarvis"
requires-python = ">=3.12"
dependencies = ["pydantic-ai"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["my_jarvis"]
