[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-jarvis-fs-datastore"
version = "0.1.0"
description = "Filesystem datastore for my-jarvis"
requires-python = ">=3.12"
dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["my_jarvis"]
