[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-jarvis-server"
version = "0.1.0"
description = "server package for my-jarvis"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["my_jarvis"]
